kibana-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: default

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kibana.local`)
      kind: Rule
      services:
        - name: kibana-kibana
          port: 5601
